--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,13 +12,11 @@ env:
 jobs:
   test:
     name: Test
-    runs-on: [
-      'self-hosted', 'zendesk-stable'
-    ]
+    runs-on: ubuntu-latest
     steps:
-      - uses: zendesk/checkout@v3
+      - uses: actions/checkout@v3
       - name: Setup Golang
-        uses: zendesk/setup-go@v3
+        uses: actions/setup-go@v3
         with:
           go-version: 1.20.2
       - name: Install TinyGO
@@ -30,6 +28,8 @@ jobs:
         run: |
           tinygo version
           tinygo build -o main.wasm -opt 2 -scheduler=none -target=wasi ./cmd/main.go
+      - name: golangci-lint
+        uses: actions/golangci-lint-action@v3
       - name: Run tests
         run: |
           go test -v ./cmd/... ./internal/...
