Part 3 with config

--- a/k8s_deploy.yml
+++ b/k8s_deploy.yml
@@ -7,7 +7,15 @@ spec:
   imagePullPolicy: Always
   match:
     - mode: SERVER
+  pluginConfig:
+    auth_authority: httpbin.default.svc.cluster.local
+    auth_cluster_name: outbound|8000||httpbin.default.svc.cluster.local
+    auth_timeout_ms: 150
   selector:
     matchLabels:
       app: helloworld
-  url: oci://docker.io/shender/wasmplugin:v2
+  url: oci://docker.io/shender/wasmplugin:v3
+  vmConfig:
+    env:
+      - name: POD_NAMESPACE
+        valueFrom: HOST
